@@ -30,7 +30,6 @@
 #include <gadget/gadgetConfig.h>
 #include <vpr/vprTypes.h>
 #include <vpr/Util/GUID.h>
-#include <vpr/Util/ReturnStatus.h>
 
 #include <vpr/IO/BufferObjectReader.h>
 #include <vpr/IO/BufferObjectWriter.h>
