@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-14-2006 patrick     Replaced uses of vpr::ReturnStatus with bool.
+                        NEW VERSION: 1.1.18
 Nov-07-2006 patrick     Added analog support to the VRPN driver.
 Oct-01-2006 patrick     Updated for VPR 1.1.35.
                         NEW VERSION: 1.1.17
